mobile menu overflow and paragraph color fixed

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -8,6 +8,7 @@ header .header-container {
   gap: 2rem;
   width: 100vw;
   padding: 2rem 0rem;
+  overflow-x: hidden;
 }
 
 header .header-container a img {
