--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ p {
   font-family: var(--barlow);
   font-size: 1.1rem;
   line-height: 180%;
+  color: var(--blue-300);
 }
 
 strong {
